...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AN6-y0-8Kb">
                                                            <rect key="frame" x="72" y="24" width="38" height="15"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="name"/>
                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                            <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="Fkj-57-kve">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="eeQ-jX-v3v">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                            <userDefinedRuntimeAttributes>
...
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="keyPath" value="Add"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                                            <color key="tintColor" red="0.31372549019607843" green="0.8901960784313725" blue="0.76078431372549016" alpha="1" colorSpace="calibratedRGB"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="keyPath" value="Cancel"/>
                                                            </userDefinedRuntimeAttributes>
                                                            <connections>
...
                                                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="keyPath" value="Edit"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </barButtonItem>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrN-5M-sli">
                                                <rect key="frame" x="41" y="251" width="51" height="14"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnY-7N-dHz">
                                                <rect key="frame" x="213" y="251" width="30" height="14.5"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="favourite" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Gj-ve-uem">
                                                <rect key="frame" x="283.5" y="251" width="50" height="14.5"/>
                                                <constraints>
...
                                                        <rect key="frame" x="81" y="0.0" width="44.5" height="45"/>
                                                        <color key="backgroundColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="call"/>
                                                        <state key="normal" image="call"/>
                                                        <connections>
...
                                                </constraints>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mobile" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgF-0s-6mf">
                                                <rect key="frame" x="24.5" y="20.5" width="48.5" height="19"/>
                                                <constraints>
...
                                                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="keyPath" value="Done"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </barButtonItem>
...
                                        </subviews>
                                        <color key="backgroundColor" red="0.50980392156862742" green="0.95686274509803915" blue="0.89411764705882346" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topView"/>
                                        <constraints>
                                            <constraint firstItem="Gar-RS-5RU" firstAttribute="centerX" secondItem="XeN-rw-6un" secondAttribute="centerX" id="D5e-dC-Y9h"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J5G-qV-ib9">
